deploy: ae50691895dd8ccc564d71962045e5b407dde54d

--- a/ch0/homotopy-and-homotopy-type.html
+++ b/ch0/homotopy-and-homotopy-type.html
@@ -533,6 +533,35 @@ to requiring that the identity map of the space be <strong>nullhomotopic</strong
 to constant map. In general, this is slightly weaker than saying the space deformation
 retracts to a point; see the exercises at the end of the chapter for an example
 distinguishing these two notions.</p>
+<p>Let us describe now an example of a 2-dimensional subspace of <span class="math notranslate nohighlight">\(\mathbb{R}^3\)</span>, known as the
+<em>house with two rooms</em>, which is contractible but not in any obvious way.</p>
+<p>To build this space, start with a box divided into two chambers by a horizontal rectangle, where by a
+‘rectangle’ we mean not just the four edges of a rectangle but also its interior. Access to
+the two chambers from outside the box is provided by two vertical tunnels. The upper
+tunnel is made by punching out a square from the top of the box and another square
+directly below it from the middle horizontal rectangle, then inserting four vertical
+rectangles, the walls of the tunnel. This tunnel allows entry to the lower chamber
+from outside the box. The lower tunnel is formed in similar fashion, providing entry
+to the upper chamber. Finally, two vertical rectangles are inserted to form ‘support
+walls’ for the two tunnels. The resulting space <span class="math notranslate nohighlight">\(X\)</span> thus consists of three horizontal
+pieces homeomorphic to annuli plus all the vertical rectangles that form  the walls of
+the two chambers.</p>
+<p>To see that <span class="math notranslate nohighlight">\(X\)</span> is contractible, consider a closed <span class="math notranslate nohighlight">\(\epsilon\)</span>-neighborhood <span class="math notranslate nohighlight">\(N(X)\)</span> of <span class="math notranslate nohighlight">\(X\)</span>.
+This clearly deformation retracts onto <span class="math notranslate nohighlight">\(X\)</span> if <span class="math notranslate nohighlight">\(\epsilon\)</span> is sufficiently small. In fact, <span class="math notranslate nohighlight">\(N(X)\)</span>
+is the mapping cylinder of a map from the boundary surface of <span class="math notranslate nohighlight">\(N(X)\)</span> to <span class="math notranslate nohighlight">\(X\)</span>. Less
+obvious is the fact that <span class="math notranslate nohighlight">\(N(X)\)</span> is homeomorphic to <span class="math notranslate nohighlight">\(D^3\)</span>,the unit ball in <span class="math notranslate nohighlight">\(\mathbb{R}^3\)</span>. To see
+this, imagine forming <span class="math notranslate nohighlight">\(N(X)\)</span> from a ball of clay by pushing a finger into the ball to
+create the upper tunnel, then gradually hollowing out the lower chamber, and similarly
+pushing a finger in to create the lower tunnel and hollowing out the upper chamber.
+Mathematically, this process gives a family of embeddings <span class="math notranslate nohighlight">\(h_t:D^3 \rightarrow \mathbb{R}^3\)</span> starting with
+the usual inclusion <span class="math notranslate nohighlight">\(D^3 \hookrightarrow \mathbb{R}^3\)</span> and ending with a homeomorphism onto <span class="math notranslate nohighlight">\(N(X)\)</span>.</p>
+<p>Thus we have <span class="math notranslate nohighlight">\(X \simeq N(X) = D^3 \simeq \, point\)</span>, so <span class="math notranslate nohighlight">\(X\)</span> is contractible since
+homotopy equivalence is an equivalence relation. In fact, <span class="math notranslate nohighlight">\(X\)</span> deformation retracts to a point. For
+if <span class="math notranslate nohighlight">\(f_t\)</span> is a deformation retraction of the ball <span class="math notranslate nohighlight">\(N(X)\)</span> to a point <span class="math notranslate nohighlight">\(x_0 \in X\)</span> and if <span class="math notranslate nohighlight">\(r:N(X) \rightarrow X\)</span>
+is a retraction, for example the end result of a deformation retraction of <span class="math notranslate nohighlight">\(N(X)\)</span> to <span class="math notranslate nohighlight">\(X\)</span>,
+then the restriction of the composition <span class="math notranslate nohighlight">\(rf_t\)</span> to <span class="math notranslate nohighlight">\(X\)</span> is a deformation retraction of <span class="math notranslate nohighlight">\(X\)</span> to
+<span class="math notranslate nohighlight">\(x_0\)</span>. However, it is quite a challenging exercise to see exactly what this deformation
+retraction look like.</p>
 </section>
 
 
