deploy: b6ae8ab188b6855a560bc948b6d465de44c66ff1

--- a/ch0/homotopy-and-homotopy-type.html
+++ b/ch0/homotopy-and-homotopy-type.html
@@ -535,6 +535,7 @@ retracts to a point; see the exercises at the end of the chapter for an example
 distinguishing these two notions.</p>
 <p>Let us describe now an example of a 2-dimensional subspace of <span class="math notranslate nohighlight">\(\mathbb{R}^3\)</span>, known as the
 <em>house with two rooms</em>, which is contractible but not in any obvious way.</p>
+<img alt="../_images/house-with-two-rooms.png" src="../_images/house-with-two-rooms.png" />
 <p>To build this space, start with a box divided into two chambers by a horizontal rectangle, where by a
 ‘rectangle’ we mean not just the four edges of a rectangle but also its interior. Access to
 the two chambers from outside the box is provided by two vertical tunnels. The upper
