deploy: 04c0ec2f1fd69518519989a42069da721e1c1445

--- a/ch0/two-criteria-for-homotopy-equivalence.html
+++ b/ch0/two-criteria-for-homotopy-equivalence.html
@@ -520,8 +520,8 @@ its homotopy type. A different algebraic invariant that works equally well for g
 and whose rigorous development requires less effort than the Euler characteristic, is
 the fundamental group of a space, the subject of Chapter 1.</p>
 <a class="reference internal image-reference" href="../_images/example0-8.png"><img alt="../_images/example0-8.png" class="align-right" src="../_images/example0-8.png" style="width: 40%;" /></a>
-<div class="no-indent docutils container">
-<p id="example-0-8"><strong>Example 0.8</strong>. Consider the space <span class="math notranslate nohighlight">\(X\)</span> obtained
+<div class="no-indent docutils container" id="example-0-8">
+<p><strong>Example 0.8</strong>. Consider the space <span class="math notranslate nohighlight">\(X\)</span> obtained
 from <span class="math notranslate nohighlight">\(S^2\)</span> by attaching the two ends of an arc
 <span class="math notranslate nohighlight">\(A\)</span> to two distinct points on the sphere, say the
 north and south poles. Let <span class="math notranslate nohighlight">\(B\)</span> be an arc in <span class="math notranslate nohighlight">\(S^2\)</span>
@@ -551,8 +551,8 @@ front halves of the equators of the <span class="math notranslate nohighlight">\
 sum of <span class="math notranslate nohighlight">\(S^1\)</span> with <span class="math notranslate nohighlight">\(n\)</span> <span class="math notranslate nohighlight">\(2\)</span>-spheres. (One can see why a wedge sum is sometimes a called a
 ‘bouquet’ in the older literature.)</p>
 </div>
-<div class="no-indent-no-margin docutils container" id="example-1-10">
-<p id="example-0-10"><strong>Example 0.10: Reduced Suspension</strong>. Let <span class="math notranslate nohighlight">\(X\)</span> be a CW complex and <span class="math notranslate nohighlight">\(x_0 \in X\)</span> a <span class="math notranslate nohighlight">\(0\)</span>-cell.
+<div class="no-indent-no-margin docutils container" id="example-0-10">
+<p><strong>Example 0.10: Reduced Suspension</strong>. Let <span class="math notranslate nohighlight">\(X\)</span> be a CW complex and <span class="math notranslate nohighlight">\(x_0 \in X\)</span> a <span class="math notranslate nohighlight">\(0\)</span>-cell.
 Inside the suspension <span class="math notranslate nohighlight">\(SX\)</span> we have the line segment <span class="math notranslate nohighlight">\(\{x_0\} \times I\)</span>, and collapsing this to a
 point yields a space <span class="math notranslate nohighlight">\(\sum X\)</span> homotopy equivalent to <span class="math notranslate nohighlight">\(SX\)</span>, called the <strong>reduced suspension</strong>
 of <span class="math notranslate nohighlight">\(X\)</span>. For example, if we take <span class="math notranslate nohighlight">\(X\)</span> to be <span class="math notranslate nohighlight">\(S^1 \vee S^1\)</span> with <span class="math notranslate nohighlight">\(x_0\)</span> the intersection point of the
@@ -599,11 +599,7 @@ these spaces all to have the same homotopy type. This is often the case:</p>
 <p>Again let us defer the proof and look at some examples.</p>
 <div class="no-indent docutils container">
 <p id="example-0-11"><strong>Example 0.11</strong>. Let us rederive the result in <a class="hxr-hoverxref hxr-tooltip reference internal" href="#example-0-8"><span class="std std-ref">Example 0.8</span></a> that a sphere with two points identified is homo</p>
-<p>test <a class="hxr-hoverxref hxr-tooltip reference internal" href="#example-0-10"><span class="std std-ref">Example 0.10</span></a></p>
-<p>test <a class="hxr-hoverxref hxr-tooltip reference internal" href="#example-1-10"><span class="std std-ref">Example 1.10</span></a></p>
 </div>
-<p>test <a class="hxr-hoverxref hxr-tooltip reference internal" href="#example-0-10"><span class="std std-ref">Example 0.10</span></a></p>
-<p>test <a class="hxr-hoverxref hxr-tooltip reference internal" href="#example-1-10"><span class="std std-ref">Example 1.10</span></a></p>
 </section>
 </section>
 
