--- a/ch0/two-criteria-for-homotopy-equivalence.html
+++ b/ch0/two-criteria-for-homotopy-equivalence.html
@@ -598,7 +598,8 @@ these spaces all to have the same homotopy type. This is often the case:</p>
 </div></blockquote>
 <p>Again let us defer the proof and look at some examples.</p>
 <div class="no-indent docutils container">
-<p id="example-0-11"><strong>Example 0.11</strong>. Let us rederive the result in <a class="hxr-hoverxref hxr-tooltip reference internal" href="#example-0-8"><span class="std std-ref">Example 0.8</span></a> that a sphere with two points identified is homo</p>
+<p id="example-0-11"><strong>Example 0.11</strong>. Let us rederive the result in <span class="xref std std-hoverxref">Example 0.8</span> that a sphere with two points
+identified is homotopy equivalent to <span class="math notranslate nohighlight">\(S^1 \vee S^2\)</span>. The sphere</p>
 </div>
 </section>
 </section>
