--- a/ch0/two-criteria-for-homotopy-equivalence.html
+++ b/ch0/two-criteria-for-homotopy-equivalence.html
@@ -598,8 +598,15 @@ these spaces all to have the same homotopy type. This is often the case:</p>
 </div></blockquote>
 <p>Again let us defer the proof and look at some examples.</p>
 <div class="no-indent docutils container">
-<p id="example-0-11"><strong>Example 0.11</strong>. Let us rederive the result in <span class="xref std std-hoverxref">Example 0.8</span> that a sphere with two points
-identified is homotopy equivalent to <span class="math notranslate nohighlight">\(S^1 \vee S^2\)</span>. The sphere</p>
+<a class="reference internal image-reference" href="../_images/example0-11.png" id="example-0-11"><img alt="../_images/example0-11.png" class="align-right" id="example-0-11" src="../_images/example0-11.png" style="width: 30%;" /></a>
+<p><strong>Example 0.11</strong>. Let us rederive the result in <span class="xref std std-hoverxref">Example 0.8</span> that a sphere with two points
+identified is homotopy equivalent to <span class="math notranslate nohighlight">\(S^1 \vee S^2\)</span>. The sphere
+with two points identified can be obtained by attaching <span class="math notranslate nohighlight">\(S^2\)</span>
+to <span class="math notranslate nohighlight">\(S^1\)</span> by a map that wraps a closed arc <span class="math notranslate nohighlight">\(A\)</span> in <span class="math notranslate nohighlight">\(S^2\)</span> around <span class="math notranslate nohighlight">\(S^1\)</span>,
+as shown in the figure. Since <span class="math notranslate nohighlight">\(A\)</span> is contractible, this attaching
+map is homotopic to a constant map of <span class="math notranslate nohighlight">\(A\)</span> yields <span class="math notranslate nohighlight">\(S^1 \vee S^2\)</span>. The result
+then follows since <span class="math notranslate nohighlight">\((S^2, A)\)</span> is a CW pair, <span class="math notranslate nohighlight">\(S^2\)</span> being obtained from <span class="math notranslate nohighlight">\(A\)</span> by attaching a
+<span class="math notranslate nohighlight">\(2\)</span>-cell.</p>
 </div>
 </section>
 </section>
