deploy: 0f11cf755709234a83ec729731a3a02a6c43663e

--- a/ch0/two-criteria-for-homotopy-equivalence.html
+++ b/ch0/two-criteria-for-homotopy-equivalence.html
@@ -599,7 +599,7 @@ these spaces all to have the same homotopy type. This is often the case:</p>
 <p>Again let us defer the proof and look at some examples.</p>
 <div class="no-indent docutils container">
 <a class="reference internal image-reference" href="../_images/example0-11.png" id="example-0-11"><img alt="../_images/example0-11.png" class="align-right" id="example-0-11" src="../_images/example0-11.png" style="width: 30%;" /></a>
-<p><strong>Example 0.11</strong>. Let us rederive the result in <span class="xref std std-hoverxref">Example 0.8</span> that a sphere with two points
+<p><strong>Example 0.11</strong>. Let us rederive the result in <a class="hxr-hoverxref hxr-tooltip reference internal" href="#example-0-8"><span class="std std-ref">Example 0.8</span></a> that a sphere with two points
 identified is homotopy equivalent to <span class="math notranslate nohighlight">\(S^1 \vee S^2\)</span>. The sphere
 with two points identified can be obtained by attaching <span class="math notranslate nohighlight">\(S^2\)</span>
 to <span class="math notranslate nohighlight">\(S^1\)</span> by a map that wraps a closed arc <span class="math notranslate nohighlight">\(A\)</span> in <span class="math notranslate nohighlight">\(S^2\)</span> around <span class="math notranslate nohighlight">\(S^1\)</span>,
@@ -607,6 +607,14 @@ as shown in the figure. Since <span class="math notranslate nohighlight">\(A\)</
 map is homotopic to a constant map of <span class="math notranslate nohighlight">\(A\)</span> yields <span class="math notranslate nohighlight">\(S^1 \vee S^2\)</span>. The result
 then follows since <span class="math notranslate nohighlight">\((S^2, A)\)</span> is a CW pair, <span class="math notranslate nohighlight">\(S^2\)</span> being obtained from <span class="math notranslate nohighlight">\(A\)</span> by attaching a
 <span class="math notranslate nohighlight">\(2\)</span>-cell.</p>
+</div>
+<div class="no-indent docutils container">
+<p><strong>Example 0.12</strong>. In similar fashion we can see that the necklace in <a class="hxr-hoverxref hxr-tooltip reference internal" href="#example-0-9"><span class="std std-ref">Example 0.9</span></a> is
+homotopy equivalent to the wedge sum of a circle with <span class="math notranslate nohighlight">\(n\)</span> <span class="math notranslate nohighlight">\(2\)</span>-spheres. The necklace
+can be obtained from a circle by attaching <span class="math notranslate nohighlight">\(n\)</span> <span class="math notranslate nohighlight">\(2\)</span>-spheres along arcs, so the necklace
+is homotopy equivalent to the space obtained by attaching <span class="math notranslate nohighlight">\(n\)</span> <span class="math notranslate nohighlight">\(2\)</span>-spheres to a circle
+at points. Then we can slide these attaching points around the circle until they all
+coincide, producing the wedge sum.</p>
 </div>
 </section>
 </section>
