deploy: 011602ee9d687ff4a16720f213b073e2edf575a3

--- a/ch0/two-criteria-for-homotopy-equivalence.html
+++ b/ch0/two-criteria-for-homotopy-equivalence.html
@@ -520,11 +520,12 @@ its homotopy type. A different algebraic invariant that works equally well for g
 and whose rigorous development requires less effort than the Euler characteristic, is
 the fundamental group of a space, the subject of Chapter 1.</p>
 <div class="no-indent docutils container" id="example-0-8">
-<a class="reference internal image-reference" href="../_images/example0-8.png"><img alt="../_images/example0-8.png" class="align-right" src="../_images/example0-8.png" style="width: 40%;" /></a>
 <p><strong>Example 0.8</strong>. Consider the space <span class="math notranslate nohighlight">\(X\)</span> obtained
 from <span class="math notranslate nohighlight">\(S^2\)</span> by attaching the two ends of an arc
 <span class="math notranslate nohighlight">\(A\)</span> to two distinct points on the sphere, say the
-north and south poles. Let <span class="math notranslate nohighlight">\(B\)</span> be an arc in <span class="math notranslate nohighlight">\(S^2\)</span>
+north and south poles.</p>
+<a class="reference internal image-reference" href="../_images/example0-8.png"><img alt="../_images/example0-8.png" class="align-right" src="../_images/example0-8.png" style="width: 40%;" /></a>
+<p>Let <span class="math notranslate nohighlight">\(B\)</span> be an arc in <span class="math notranslate nohighlight">\(S^2\)</span>
 joining the two points where <span class="math notranslate nohighlight">\(A\)</span> attaches. Then
 <span class="math notranslate nohighlight">\(X\)</span> can be given CW complex structure with
 the two endpoints of <span class="math notranslate nohighlight">\(A\)</span> and <span class="math notranslate nohighlight">\(B\)</span> as <span class="math notranslate nohighlight">\(0\)</span>-cells, the
