--- a/ch0/two-criteria-for-homotopy-equivalence.html
+++ b/ch0/two-criteria-for-homotopy-equivalence.html
@@ -520,7 +520,7 @@ its homotopy type. A different algebraic invariant that works equally well for g
 and whose rigorous development requires less effort than the Euler characteristic, is
 the fundamental group of a space, the subject of Chapter 1.</p>
 <div class="no-indent docutils container" id="example-0-8">
-<a class="reference internal image-reference" href="../_images/example0-8.png"><img alt="../_images/example0-8.png" class="align-center" src="../_images/example0-8.png" style="width: 40%;" /></a>
+<a class="reference internal image-reference" href="../_images/example0-8.png"><img alt="../_images/example0-8.png" class="align-right" src="../_images/example0-8.png" style="width: 100%;" /></a>
 <p><strong>Example 0.8</strong>. Consider the space <span class="math notranslate nohighlight">\(X\)</span> obtained
 from <span class="math notranslate nohighlight">\(S^2\)</span> by attaching the two ends of an arc
 <span class="math notranslate nohighlight">\(A\)</span> to two distinct points on the sphere, say the
@@ -543,7 +543,7 @@ disks, and the <span class="math notranslate nohighlight">\(2\)</span>-cells are
 the meridional disks. Collapsing each meridional disk to a point yields a homotopy
 equivalent space <span class="math notranslate nohighlight">\(Y\)</span> consisting of <span class="math notranslate nohighlight">\(n\)</span> <span class="math notranslate nohighlight">\(2\)</span>-spheres, each tangent to its two neighbors, a
 ‘necklace with <span class="math notranslate nohighlight">\(n\)</span> beads’.</p>
-<a class="reference internal image-reference" href="../_images/example0-9.png"><img alt="../_images/example0-9.png" class="align-center" src="../_images/example0-9.png" style="width: 100%;" /></a>
+<a class="reference internal image-reference" href="../_images/example0-9.png"><img alt="../_images/example0-9.png" class="align-center" src="../_images/example0-9.png" style="width: 50%;" /></a>
 <p>The third space <span class="math notranslate nohighlight">\(Z\)</span> in the figure, a strand of <span class="math notranslate nohighlight">\(n\)</span> beads with a
 string joining its two ends, collapses to <span class="math notranslate nohighlight">\(Y\)</span> by collapsing the string to a point, so this
 collapse is a homotopy equivalence. Finally, by collapsing the arc in <span class="math notranslate nohighlight">\(Z\)</span> formed by the
