deploy: ab3744a98a595becfd196055a0f7d6f6259a31d6

--- a/ch0/the-homotopy-extension-property.html
+++ b/ch0/the-homotopy-extension-property.html
@@ -469,7 +469,14 @@ the two criteria for homotopy equivalence described above. The proofs depend upo
 a technical property that arises in many other contexts as well. Consider the following
 problem. Suppose one is given a map <span class="math notranslate nohighlight">\(f_0:X \rightarrow Y\)</span>, and on a subspace <span class="math notranslate nohighlight">\(A \subset X\)</span> one is also
 given a homotopy <span class="math notranslate nohighlight">\(f_t:A \rightarrow Y\)</span> of <span class="math notranslate nohighlight">\(f_0 \mid A\)</span> that one would like to extend to a homotopy
-<span class="math notranslate nohighlight">\(f_t:X \rightarrow Y\)</span> of the given <span class="math notranslate nohighlight">\(f_0\)</span>.</p>
+<span class="math notranslate nohighlight">\(f_t:X \rightarrow Y\)</span> of the given <span class="math notranslate nohighlight">\(f_0\)</span>. If the pair <span class="math notranslate nohighlight">\((X,A)\)</span> has the <strong>homotopy extension property</strong>. Thus
+<span class="math notranslate nohighlight">\((X,A)\)</span> has the homotopy extension property if every pair of maps <span class="math notranslate nohighlight">\(X \times \{0\} \rightarrow Y\)</span> and
+<span class="math notranslate nohighlight">\(A \times I \rightarrow Y\)</span> that agree on <span class="math notranslate nohighlight">\(A \times \{0\}\)</span> can be extended to a map <span class="math notranslate nohighlight">\(X \times I \rightarrow Y\)</span>.</p>
+<blockquote>
+<div><p><em>A pair</em> <span class="math notranslate nohighlight">\((X,A)\)</span> <em>has the homotopy extension property if and only if</em> <span class="math notranslate nohighlight">\(X \times \{0\} \cup A \times I\)</span> <em>is a
+retract of</em> <span class="math notranslate nohighlight">\(X \times I\)</span>.</p>
+</div></blockquote>
+<p>For one</p>
 </section>
 
 
