deploy: 1a5c5d390bdf9d5a5e24a77b611ece2874bac7cb

--- a/ch0/exercises.html
+++ b/ch0/exercises.html
@@ -476,6 +476,7 @@ homotopy equivalence <span class="math notranslate nohighlight">\(X\rightarrow Z
 <li><p>Show that the relation of homotopy among maps <span class="math notranslate nohighlight">\(X \rightarrow Y\)</span> is an equivalence relation.</p></li>
 <li><p>Show that a map homotopic to a homotopy equivalence is a homotopy equivalence.</p></li>
 </ol>
+<p>test reference <a class="hxr-hoverxref hxr-tooltip reference internal" href="#ex2"><span class="std std-ref">exercise 2</span></a></p>
 <p id="ex4"><strong>4.</strong> A</p>
 </div>
 </section>
