deploy: 188643950ca5cd5ff185e44b81237c79ce880774

--- a/ch1/sec1/exercises.html
+++ b/ch1/sec1/exercises.html
@@ -480,7 +480,8 @@ path, that is, a path consisting of a finite number of straight line segments tr
 at constant speed. Show this applies in particular when <span class="math notranslate nohighlight">\(X\)</span> is open or when <span class="math notranslate nohighlight">\(X\)</span> is a
 union of finitely many closed convex sets.</p>
 <p><strong>5.</strong> Show that for a space <span class="math notranslate nohighlight">\(X\)</span>, the following three conditions are equivalent:</p>
-<div class="no-margin indent a every map math-s-1 rightarrow x is homotopic to constant with image point docutils container">
+<div class="no-margin docutils container">
+<p><span style="margin-left: 1em"> (a) Every map <span class="math notranslate nohighlight">\(S^1 \rightarrow X\)</span> is homotopic to a constant map, with image a point.</p>
 <p><span style="margin-left: 1em"> (b) Every map <span class="math notranslate nohighlight">\(S^1 \rightarrow X\)</span> extends to a map <span class="math notranslate nohighlight">\(D^2 \rightarrow X\)</span>.</p>
 <p><span style="margin-left: 1em"> (c) <span class="math notranslate nohighlight">\(\pi_1(X,x_0)=0\)</span> for all <span class="math notranslate nohighlight">\(x_0 \in X\)</span>.</p>
 </div>
