deploy: 906b78cf519e37c16de3001299810072389797d9

--- a/ch0/operations-on-spaces.html
+++ b/ch0/operations-on-spaces.html
@@ -553,7 +553,7 @@ from the origin gives a homeomorphism between <span class="math notranslate nohi
 having the subspaces <span class="math notranslate nohighlight">\(X\)</span> and <span class="math notranslate nohighlight">\(Y\)</span> as subcomplexes, with the remaining cells being the
 product cells of <span class="math notranslate nohighlight">\(X \times Y \times (0,1)\)</span>. As usual with products, the CW topology on <span class="math notranslate nohighlight">\(X * Y\)</span> may
 be finer than the quotient of the product topology on <span class="math notranslate nohighlight">\(X \times Y \times I\)</span>.</p>
-<div class="no-indent-no-margin docutils container">
+<div class="no-indent-no-margin docutils container" id="wedge-sum">
 <p><strong>Wedge Sum</strong>. This is a rather trivial but still quite useful operation. Given spaces <span class="math notranslate nohighlight">\(X\)</span> and
 <span class="math notranslate nohighlight">\(Y\)</span> with chosen points <span class="math notranslate nohighlight">\(x_0 \in X\)</span> and <span class="math notranslate nohighlight">\(y_0 \in Y\)</span>, then the <strong>wedge sum</strong> <span class="math notranslate nohighlight">\(X \vee Y\)</span> is the quotient
 of the disjoint union <span class="math notranslate nohighlight">\(X \sqcup Y\)</span> obtained by identifying <span class="math notranslate nohighlight">\(x_0\)</span> and <span class="math notranslate nohighlight">\(y_0\)</span> to a single point. For
