--- a/ch1/sec1/index.html
+++ b/ch1/sec1/index.html
@@ -469,7 +469,7 @@ document.write(`
 <p>This first section begins with the basic definitions and constructions, and then
 proceeds quickly to an important calculation, the fundamental group of the circle,
 using notions developed more fully in <span class="xref std std-ref">§1.3</span>. More systematic methods of calculation
-are given in <span class="xref std std-ref">§1.2</span>. These are sufficient to show for example that every group is realized
+are given in <a class="hxr-hoverxref hxr-tooltip reference internal" href="../sec2/index.html#section-1-2"><span class="std std-ref">§1.2</span></a>. These are sufficient to show for example that every group is realized
 as the fundamental group of some space. This idea is exploited in the Additional
 Topics at the end of the chapter, which give some illustrations of how algebraic facts
 about groups can be derived topologically, such as the fact that every subgroup of a
