--- a/ch1/sec1/the-fundamental-group-of-the-circle.html
+++ b/ch1/sec1/the-fundamental-group-of-the-circle.html
@@ -700,7 +700,7 @@ Under this isomorphism a pair <span class="math notranslate nohighlight">\((p,q)
 other <span class="math notranslate nohighlight">\(S^1\)</span> factor, for example the loop <span class="math notranslate nohighlight">\(w_{pq}(s)=(w_p(s),w_q(s))\)</span>.
 Interestingly, this loop can be knotted, as the figure shows for
 the case <span class="math notranslate nohighlight">\(p=3,\, q=2\)</span>. The knots that arise in this fashion, the
-so-called <em>torus knots</em>, are studied in <span class="xref std std-ref">Example 1.24</span>.</p>
+so-called <em>torus knots</em>, are studied in <a class="hxr-hoverxref hxr-tooltip reference internal" href="../sec2/the-van-kampen-theorem.html#example-1-24"><span class="std std-ref">Example 1.24</span></a>.</p>
 <p><span style="margin-left: 2em"> More generally, the <span class="math notranslate nohighlight">\(n\)</span>-dimensional torus, which is the product of <span class="math notranslate nohighlight">\(n\)</span> circles, has
 fundamental group isomorphic to the product of <span class="math notranslate nohighlight">\(n\)</span> copies of <span class="math notranslate nohighlight">\(\mathbb{Z}\)</span>. This follows by
 induction on <span class="math notranslate nohighlight">\(n\)</span>.</p>
